tests/kulezi_tests/good/simple_if_else.lat
int main() {
    boolean x = true;
    if (x) {
        printInt(0);
        return 0;
    } else {
        printInt(1);
        return 1;
    }
}