tests/kulezi_tests/bad/assign_array_length.lat
int main() {
    int[] x = new int[5];
    x.length = 0;
    return 0;
}